# yarp-devices-bts-freeemg

./: CMakeLists.txt  README.md
.github/: CODEOWNERS
devices/: CMakeLists.txt
devices/FreeEmgWearableDevice/: CMakeLists.txt
devices/FreeEmgWearableDevice/applications/: CMakeLists.txt  EmgOnlineForceEstimation.xml  FREEEMG_Log.xml  FREEEMG_Visualization.xml  FreeEmgLog.xml  FreeEmgVisualization.xml  README.md
devices/FreeEmgWearableDevice/build_scripts/: PreBuild.bat
devices/FreeEmgWearableDevice/conf/: CMakeLists.txt  README.md  freeEMG.xml  freeEMG_logger.xml  freeemg.xml  freeemg_analog.xml  freeemg_logger.xml  freeemg_scope.xml
devices/FreeEmgWearableDevice/include/: FreeEmgDevice.h
devices/FreeEmgWearableDevice/include_private/: BioDAQUtils.h
devices/FreeEmgWearableDevice/src/: BioDAQUtils.cpp  FreeEmgDevice.cpp
